# tacho

./: Cargo.toml  README.md
benches/: bench.rs
examples/: multithread.rs  simple.rs
src/: lib.rs  prometheus.rs  report.rs  timing.rs
