[package]
authors = [
  "Steve Jenson <stevej@buoyant.io>",
  "Oliver Gould <oliver@buoyant.io>",
]
description = "tacho fork with updates -- A prometheus-focused metrics library for Future-aware applications]"
edition = "2018"
license = "Apache-2.0"
name = "sgrankin-tacho"
readme = "README.md"
repository = "https://github.com/sgrankin/tacho"
version = "0.5.1"

[lib]
name = "tacho"

[dependencies]
futures = "0.3.5"
hdrhistogram = "7.1.0"
indexmap = "1.5.2"
log = "0.4.11"
pin-project = "0.4.23"

[dev-dependencies]
criterion = "0.3.3"
pretty_env_logger = "0.4.0"
tokio = {version = "0.2.22", features = ["time", "stream"]}

[[bench]]
harness = false
name = "bench"
